--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,270 @@
-/* место для вашего кода */
+body {
+  font-family: 'Raleway', Arial, sans-serif;
+  font-weight: 400;
+}
+
+/* избавиться от text-decoration у ссылок, так как он перечеркивает текст */
+a {
+  text-decoration: none;
+}
+
+/* подчеркнуть пониже, чем text-decoration */
+a:link {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  padding: 92px 50px 96px;
+  font-size: 18px;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 33px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__links-list-item {
+  list-style: circle;
+}
+
+.header__logo-image {
+  display: block;
+  min-width: 148px;
+  max-height: 105px;
+}
+
+.address {
+  font-style: normal;
+  line-height: 1.358;
+}
+
+.header__address {
+  justify-self: end;
+  min-width: 240px;
+  max-width: 240px;
+  line-height: 1.35;
+}
+
+.cover {
+  background-image: url("../images/cover.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 0.6);
+}
+
+.cover__title {
+  padding: 165px 50px 106px;
+  color: #FFF;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 1.15;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+  display: block;
+  padding-bottom: 20px;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.aligned-text-nopadding {
+  padding-bottom: 0;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 30px;
+}
+
+.no-letter-spacing {
+  margin-right: -30px;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 50px 50px;
+  color: #FFF;
+  font-size: 22px;
+}
+
+.cover__description-text {
+  text-transform: uppercase;
+  word-spacing: 19px;
+}
+
+.bet-button {
+  border: 1px solid #FFF;
+  padding: 12px 32px 11px 31px;
+  color: #FFF;
+  font-weight: 500;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+
+.bet-button:hover {
+  box-shadow: inset 0 0 0 100px rgb(0 0 0 / 0.15);
+  cursor: pointer;
+}
+
+.lots {
+  padding: 180px 24px 120px;
+}
+
+.lots__heading {
+  padding-bottom: 27px;
+  padding-left: 40px;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 1052px;
+  padding-bottom: 30px;
+  color:#FFF;
+  list-style: none;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 596px;
+}
+
+.card-link:link {
+  height: 100%;
+  text-decoration: none;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 48px 40px;
+}
+
+.card-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card__title {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.20;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 4px;
+  text-transform: uppercase;
+}
+
+.card__text {
+  font-size: 20px;
+}
+
+.lots__look-more-link {
+  margin-bottom: 2px;
+  margin-left: 40px;
+  font-size: 20px;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  justify-items: center;
+  gap: 25px;
+  padding: 0 24px 180px;
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background-color: #000;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__column {
+  margin-top: 35px;
+}
+
+.about__title {
+  margin-top: 101px;
+  margin-bottom: 99px;
+}
+
+.about__text {
+  font-size: 20px;
+}
+
+.about__text-padding {
+  padding-bottom: 24px;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: start;
+  padding: 0 50px 82px;
+  font-size: 18px;
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-self: end;
+  gap: 48px;
+  list-style: none;
+}
+
+.footer__social-icon {
+  max-width: 48px;
+}
