--- a/styles/style.css
+++ b/styles/style.css
@@ -33,12 +33,12 @@ h2 {
   gap: 33px;
 }
 
-.header__links-list-item_no-bullit {
-  list-style: none;
-}
-
 .header__links-list-item {
   list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
 }
 
 .header__logo-image {
@@ -73,7 +73,7 @@ h2 {
 }
 
 .cover__title {
-  padding: 165px 50px 106px;
+  padding: 165px 20px 106px 50px;
   color: #FFF;
   font-weight: 700;
   font-size: 100px;
@@ -99,11 +99,7 @@ h2 {
 }
 
 .letter-spacing-extended {
-  letter-spacing: 30px;
-}
-
-.no-letter-spacing {
-  margin-right: -30px;
+  letter-spacing: 0.3em;
 }
 
 .cover__description {
@@ -117,7 +113,7 @@ h2 {
 
 .cover__description-text {
   text-transform: uppercase;
-  word-spacing: 19px;
+  word-spacing: 0.84em;
 }
 
 .bet-button {
@@ -128,7 +124,6 @@ h2 {
   text-transform: uppercase;
   background-color: transparent;
 }
-
 
 .bet-button:hover {
   box-shadow: inset 0 0 0 100px rgb(0 0 0 / 0.15);
@@ -165,22 +160,26 @@ h2 {
 }
 
 .card {
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
   padding: 48px 40px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 
-.card-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.card_type_film {
+  background-image: url("../images/card-lot-01.jpg");
+}
+
+.card_type_book {
+  background-image: url("../images/card-lot-02.jpg");
+}
+
+.card_type_picture {
+  background-image: url("../images/card-lot-03.jpg");
 }
 
 .card__title {
