--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,7 @@ h2 {
 }
 
 .letter-spacing-extended {
-  letter-spacing: 0.3em;
+  letter-spacing: 30px;
 }
 
 .cover__description {
@@ -113,7 +113,7 @@ h2 {
 
 .cover__description-text {
   text-transform: uppercase;
-  word-spacing: 0.84em;
+  word-spacing: 19px;
 }
 
 .bet-button {
