--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,7 @@ h2 {
 }
 
 .letter-spacing-extended {
-  letter-spacing: 30px;
+  letter-spacing: 0.3em;
 }
 
 .cover__description {
@@ -113,7 +113,7 @@ h2 {
 
 .cover__description-text {
   text-transform: uppercase;
-  word-spacing: 19px;
+  word-spacing: 0.84em;
 }
 
 .bet-button {
@@ -152,6 +152,9 @@ h2 {
 .lots__card-list-item {
   width: 334px;
   min-height: 596px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 
 .card-link:link {
@@ -165,9 +168,6 @@ h2 {
   justify-content: space-between;
   height: 100%;
   padding: 48px 40px;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
 }
 
 .card_type_film {
